@@ -1,3 +1,6 @@
+* 2005-05-10 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Fit dataset options now have drop down menus
+	
 * 2005-05-09 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fix problem with log axis if minimum is zero
 	- Highlight setting label if has mouse over / focus / context menu
